# serialport-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: docker-release.md  implementation-plan.md  open-source-spec.md  phase-10-mock-device-scripted-responses-handoff.md  phase-11-real-serial-lifecycle-handoff.md  phase-12-config-file-defaults-handoff.md  phase-13-sqlite-presets-handoff.md  phase-14-raspberry-pi-systemd-handoff.md  phase-15-release-docker-handoff.md  phase-16-websocket-events-handoff.md  phase-17-socketio-compatibility-handoff.md  phase-18-arm-release-automation-handoff.md  phase-19-armv7-release-decision-handoff.md  phase-20-ci-libudev-handoff.md  phase-21-web-dashboard-handoff.md  phase-22-live-streaming-handoff.md  phase-23-dashboard-status-handoff.md  phase-24-dashboard-e2e-handoff.md  phase-3-handoff-http-api-skeleton.md  phase-4.2-handoff-connection-lifecycle.md  phase-4.3-handoff-compatibility-aliases.md  phase-5.1-handoff-command-endpoint.md  phase-6.1-handoff-readme-rewrite.md  phase-7-real-serial-transport-handoff.md  phase-8-serial-read-loop-handoff.md  phase-9-reqid-response-matching-handoff.md  raspberry-pi-systemd.md
examples/: docker-compose.yml  serialport-api.toml
examples/systemd/: serialport-api.service
src/: config.rs  error.rs  lib.rs  main.rs  protocol.rs
src/api/: routes.rs
src/serial/: manager.rs  mock_device.rs  mod.rs  read_loop.rs  real_transport.rs  transport.rs
src/storage/: mod.rs  sqlite.rs
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
web/e2e/: dashboard.spec.ts  fixtures.ts
web/src/: App.tsx  api.ts  styles.css
web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  scroll-area.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx
