[package]
name = "serialport-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Farhan Poh-Asae <farhan.abuhazan@gmail.com>"]
license = "MIT"
description = "JSON-based serial port communication service for microcontrollers and Raspberry Pi"
repository = "https://github.com/avepha/serialport-api"
readme = "README.md"
keywords = ["serialport", "microcontroller", "raspberry-pi", "json", "api"]
categories = ["command-line-utilities", "embedded", "web-programming::http-server"]

[dependencies]
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
