[package]
name = "serialport-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Farhan Poh-Asae <farhan.abuhazan@gmail.com>"]
license = "MIT"
description = "JSON-based serial port communication service for microcontrollers and Raspberry Pi"
repository = "https://github.com/avepha/serialport-api"
readme = "README.md"
keywords = ["serialport", "microcontroller", "raspberry-pi", "json", "api"]
categories = ["command-line-utilities", "embedded", "web-programming::http-server"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
serialport = "4"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full", "test-util"] }
toml = "0.8"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
futures-util = "0.3"
pretty_assertions = "1"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
